# algo-trading-system

./: .gitignore  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/portfolio-cockpit/: SKILL.md
.claude/skills/portfolio-cockpit/references/: pms-screening-spec.md  portfolio-data.md  watchlist.md
.github/workflows/: cockpit-phase1.yml  cockpit-phase2.yml  cockpit-phase3.yml  screen-candidates.yml  update-portfolio.yml
cockpit/: config.py  market_data.py  models.py  portfolio.py  runner.py  screener.py  screener_in.py  telegram.py  updater.py
references/: portfolio.yaml
scripts/: cockpit_runner.py  fetch_nse_prices.py  run_cockpit.py  run_screener.py  screen_candidates.py  update_portfolio.py
src/backtest/: engine.py
src/data/: fetcher.py
src/features/: indicators.py
src/models/: optimizer.py  predictor.py
tests/: conftest.py  test_cockpit_runner.py  test_fetch_nse_prices.py  test_screen_candidates.py  test_screener_in.py  test_update_portfolio.py
