[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nse-portfolio-cockpit"
version = "1.0.0"
description = "Daily NSE portfolio monitoring and PMS screening system"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pytz>=2024.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.0",
    "yfinance>=0.2.50",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cockpit*"]
